--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -6,4 +6,5 @@ scikit-learn>=1.0.0
 langchain>=0.1.0
 langchain-openai>=0.0.2
 python-dotenv>=1.0.0
-pydantic>=2.0.0 
+pydantic>=2.0.0
+tabulate>=0.9.0 
